apps/web/header-response/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: header-response
  labels:
    app: header-response-server
spec:
  selector:
    app: header-response
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
